# kamaki

./: pyproject.toml  update_version.py
docs/: conf.py  setup.rst
src/kamaki/cli/: __init__.py  errors.py  history.py  logger.py  one_cmd.py  shell.py  test.py
src/kamaki/cli/argument/: __init__.py  test.py
src/kamaki/cli/cmds/: __init__.py  astakos.py  blockstorage.py  config.py  cyclades.py  errors.py  history.py  image.py  network.py  pithos.py
src/kamaki/cli/cmdtree/: __init__.py  test.py
src/kamaki/cli/config/: __init__.py  test.py
src/kamaki/cli/contrib/: scripts.py
src/kamaki/cli/utils/: __init__.py  test.py
src/kamaki/clients/: __init__.py  test.py
src/kamaki/clients/astakos/: __init__.py  test.py
src/kamaki/clients/blockstorage/: __init__.py  rest_api.py  test.py
src/kamaki/clients/compute/: __init__.py  rest_api.py  test.py
src/kamaki/clients/cyclades/: __init__.py  rest_api.py  test.py
src/kamaki/clients/image/: __init__.py  test.py
src/kamaki/clients/network/: __init__.py  rest_api.py  test.py
src/kamaki/clients/pithos/: __init__.py  rest_api.py  test.py
src/kamaki/clients/storage/: __init__.py  test.py
src/kamaki/clients/utils/: __init__.py  https.py  ordereddict.py  test.py
